--- a/cli/templates/hello-world/build.gradle
+++ b/cli/templates/hello-world/build.gradle
@@ -101,10 +101,11 @@ project(":html") {
 project(":core") {
     apply plugin: "java"
 
-
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        // SnapDragon changes
+        compile "org.python:jython:2.7.0"
     }
 }
 
