Abandon hope, all ye who enter With the correct Jython standalone, a hello-world game is 45MB. This will not do at all.

--- a/cli/templates/hello-world/snapdragon.gradle
+++ b/cli/templates/hello-world/snapdragon.gradle
@@ -2,6 +2,6 @@
 // and update libGDX to the (future) latest version.
 project(":core") {
     dependencies {
-        compile "org.python:jython:2.7.0"
+        compile "org.python:jython-standalone:2.7.1b2"
     }
 }
